# badwrapi

./: .gitignore  CMakeLists.txt  README.md  TECH.md  UPDATES.md
src/: CMakeLists.txt  badooapi.cpp  badooapi.h  badooenums.h  badoolocationdialog.cpp  badoolocationdialog.h  badoologindialog.cpp  badoologindialog.h  badoosearchsettingsdialog.cpp  badoosearchsettingsdialog.h  badoowrapper.cpp  badoowrapper.h  badwrapi.rc  browsefolderdialog.cpp  browsefolderdialog.h  db.cpp  db.h  folderviewer.cpp  folderviewer.h  httprequest.cpp  httprequest.h  main.cpp  main.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  mediacontrols.cpp  mediacontrols.h  mediaviewer.cpp  mediaviewer.h  playencountersdialog.cpp  playencountersdialog.h  playencountersdialog.ui  profileviewer.cpp  profileviewer.h  profileviewer.ui  tageocoder.cpp  tageocoder.h
